core to ESM + CJS

--- a/lib/core/package.json
+++ b/lib/core/package.json
@@ -15,7 +15,9 @@
     "directory": "lib/core"
   },
   "license": "MIT",
-  "main": "dist/client/index.js",
+  "sideEffects": false,
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
   "types": "dist/client/index.d.ts",
   "files": [
     "dist/**/*",
