--- a/addons/actions/package.json
+++ b/addons/actions/package.json
@@ -15,7 +15,8 @@
     "directory": "addons/actions"
   },
   "license": "MIT",
-  "main": "dist/index.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist/**/*",
